Single Dataset concatenation with delimiters and enabled to chose multiple columns. Issues left - dependency between merge and concatenation datasets, name of the dataset is not visible after chosing

--- a/client/src/styles/Layout.css
+++ b/client/src/styles/Layout.css
@@ -5,7 +5,7 @@
 
 .sidebar {
   width: 250px; /* Define the width of the sidebar */
-  height: 90vh;
+  height: 100vh;
   background-color: #f6f2eb; /* Example background color for the sidebar */
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1); /* Optional shadow for sidebar */
 }
