--- a/client/src/styles/MultiStepForm.css
+++ b/client/src/styles/MultiStepForm.css
@@ -25,7 +25,7 @@
 .card-content {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  /* gap: 10px; */
 }
 
 .card-content-step1 {
@@ -75,7 +75,7 @@
   display: flex;
   width: 100%;
   flex-direction: column;
-  gap: 20px;
+  gap: 15px;
 }
 .table-2-inputs {
   display: flex;
@@ -111,17 +111,20 @@
   background-color: #b9c0d832;
   color: black;
   font-weight: bold;
-  padding: 8px;
+  padding-left:2%;
+  /* padding: 8px; */
   border: none;
   border-radius: 4px;
   font-size: 16px;
+  border:solid 2px grey
 }
 
 .select-dataset {
   width: 100%;
   height: 81px;
-  padding: 5%;
-  font-size: 1.2em;
+  /* padding: 5%; */
+  padding-left: 2%;
+  font-size: 1.3em;
   font-weight: bold;
   background-color: #ffb93f2f;
   border: 3px dashed #ffb93f;
@@ -139,12 +142,14 @@
   border-radius: 10px;
   font-size: 0.9em;
   background-color: white; /* Background of the options */
-  padding: 10px; /* Padding inside the options */
+   /* padding-left:0px;Padding inside the options */
+
+   
 }
 
 .select:focus {
-  outline: none;
-  border-color: #007bff;
+  outline:black;
+  border-color: black;
 }
 
 .operation-icon {
@@ -161,4 +166,73 @@
   background-color: #ffb93f;
   font-size: 18px;
   color: black;
+  margin-top:15px;
 }
+
+/* New additons */
+
+.step-title{
+  color: black;
+}
+.selected-columns {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+  /* margin-top: 10px; */
+}
+
+.selected-column {
+  background-color: #e0e0e0;
+  padding: 8px;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+}
+
+.remove-icon {
+  margin-left: 8px;
+  cursor: pointer;
+  color: black;
+}
+
+.chosen-columns-title {
+  font-weight: bold;
+  /* margin-bottom: 2px; Space below the title */
+  font-size: 18px; /* Slightly larger font size */
+  text-align: left; /* Ensure the title is left-aligned */
+}
+
+.delimiter-title {
+  text-align: left;
+  font-size: 18px; /* Adjust size as needed */
+  font-weight: bold; /* Optional: Make it bold */
+  /* margin-top: 20px; Space above delimiter title */
+  /* margin-bottom: 10px; Space below delimiter title */
+  margin-bottom: 15px;
+  /* margin-top: 5px; */
+}
+
+.delimiter-input{
+  text-align: left;
+  padding: 0px;
+}
+
+
+.merge-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 0;
+}
+
+.merge-icon {
+  font-size: 24px;
+  margin: 0 10px;
+}
+
+/* .select-cols{
+  margin-bottom: 15px;
+} */
